<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.eisenhower.fragment.EisenhowerMatricsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/do_this_now_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        style="@style/DefaultCardViewStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/hand_this_off_card"
        app:layout_constraintRight_toLeftOf="@id/plan_for_this_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/urgent_important_list_title"
                android:textStyle="bold"
                android:textColor="@color/urgent_important"
                android:padding="9sp"
                android:textSize="18sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/do_this_now_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/hand_this_off_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        style="@style/DefaultCardViewStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/do_this_now_card"
        app:layout_constraintRight_toLeftOf="@id/let_it_go_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/urgent_not_important_list_title"
                android:textStyle="bold"
                android:textColor="@color/urgent_not_important"
                android:padding="9sp"
                android:textSize="18sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hand_this_off_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/plan_for_this_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        style="@style/DefaultCardViewStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/do_this_now_card"
        app:layout_constraintBottom_toTopOf="@id/let_it_go_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_urgent_important_list_title"
                android:textStyle="bold"
                android:textColor="@color/not_urgent_important"
                android:padding="9sp"
                android:textSize="18sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/plan_for_this_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/let_it_go_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        style="@style/DefaultCardViewStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plan_for_this_card"
        app:layout_constraintLeft_toRightOf="@id/hand_this_off_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_urgent_not_important_list_title"
                android:textStyle="bold"
                android:textColor="@color/not_urgent_not_important"
                android:padding="9sp"
                android:textSize="18sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/let_it_go_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>